# libvdpau-rockchip

./: CMakeLists.txt  Makefile  h264_decoder.c  presentation_queue.c  video_mixer.c
debian/: changelog  control
include/: v4l2.h
librkdec/: CMakeLists.txt  Makefile  h264d.c
libvpu/h264_dec/: Makefile  h264decapi.h
